--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -344,7 +344,7 @@ typedef enum {
 	/** RT is encapsulating a Linux native capture record */
 	TRACE_RT_DATA_LINUX_NATIVE=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_LINUX_NATIVE,
 	/** RT is encapsulating a BSD native capture record */
-	TRACE_RT_DATA_BPF       =TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_BPF,
+	//TRACE_RT_DATA_BPF       =TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_BPF,
 	/** RT is encapsulating a TSH capture record */
 	TRACE_RT_DATA_TSH	=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_TSH,
 	/** RT is encapsulating an ATM header capture record */
@@ -376,9 +376,21 @@ typedef enum {
 	/** Unused value marking the end of the valid range for PCAP RT 
 	 * encapsulation */
 	TRACE_RT_DATA_DLT_END		= 2999,
+	/** BPF does not store the linktype with the packet, so we need a
+	 * separate RT type for each supported DLT. This value represents the
+	 * starting point */
+	TRACE_RT_DATA_BPF		= 3000,
+
+	TRACE_RT_BPF_NULL		= TRACE_RT_DATA_BPF+TRACE_DLT_NULL,
+	TRACE_RT_BPF_EN10MB		= TRACE_RT_DATA_BPF+TRACE_DLT_EN10MB,
+	TRACE_RT_BPF_IEEE802_11		= TRACE_RT_DATA_BPF+TRACE_DLT_IEEE802_11,
+	TRACE_RT_BPF_PFLOG		=TRACE_RT_DATA_BPF+TRACE_DLT_PFLOG,
+	TRACE_RT_BPF_ATM_RFC1483 	=TRACE_RT_DATA_BPF+TRACE_DLT_ATM_RFC1483,
+
+	TRACE_RT_DATA_BPF_END		= 3999,
 	/** Unused value marking the end of the valid range for all RT packet
 	 * types */
-	TRACE_RT_LAST			= 3000
+	TRACE_RT_LAST			= 4000
 } libtrace_rt_types_t;
 
 /** IP Protocol values */
