* A very cut-down version of int: and ring: is now built on non-Linux systems, enabling them to be able to decode packets captured using those formats and exported via RT  * Replaced arphrd.h with a new header file (libtrace_arphrd.h) that provides our own #defines for the various ARPHRD types. The inconsistency between what is available on different OS's was becoming problematic.  * Increased RT buffer size so we can always fit a complete libtrace buffer into it - int: over RT tends to result in very large "packets".  * Fixed copy-paste error in the failure case when creating a dummy linux trace in format_rt.c  * Updated various bits of code to use the new LIBTRACE_ARPHRD types where sensible  * Removed unneeded #include in protocols_pktmeta.c  * Replaced __u32 and __u16 types in format_linux with more portable uint32_t and uint16_t types  * Removed unneeded calls to linuxnative_init_input in the prepare_packet functions in format_linux.c  * Don't call the fin_input function on a trace if the format does not provide one

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,15 +1,11 @@
 lib_LTLIBRARIES = libtrace.la
-include_HEADERS = libtrace.h dagformat.h lt_inttypes.h daglegacy.h rt_protocol.h erftypes.h 
+include_HEADERS = libtrace.h dagformat.h lt_inttypes.h daglegacy.h rt_protocol.h erftypes.h  
 
 AM_CFLAGS=@LIBCFLAGS@
 AM_CXXFLAGS=@LIBCXXFLAGS@
 
 extra_DIST = format_template.c
-if HAVE_NETPACKET_PACKET_H
 NATIVEFORMATS=format_linux.c
-else
-NATIVEFORMATS=
-endif
 
 if HAVE_BPF_CAPTURE
 BPFFORMATS=format_bpf.c
@@ -46,7 +42,7 @@ libtrace_la_SOURCES = trace.c common.h \
 		protocols_transport.c protocols.h protocols_ospf.c \
 		$(DAGSOURCE) format_erf.h \
 		$(BPFJITSOURCE) \
-		arphrd.h
+		libtrace_arphrd.h
 
 if DAG2_4
 nodist_libtrace_la_SOURCES = dagopts.c dagapi.c
