* Re-wrote large chunks of the rijndael code to fix all those blasted type-punning warnings

--- a/tools/traceanon/Makefile.am
+++ b/tools/traceanon/Makefile.am
@@ -9,4 +9,4 @@ traceanon_SOURCES = traceanon.c rijndael.h rijndael.c panon.h panon.c ipenc.c ip
 # rijndael.c does lots of nasty casting that is going to be a nightmare to fix
 # and debug - I'm going to disable this warning in the interim, as it's really
 # messy and hopefully isn't actually an issue. 
-traceanon_CFLAGS = -fno-strict-aliasing $(AM_CFLAGS)
+traceanon_CFLAGS = $(AM_CFLAGS)
