* Added checksumming functions for both the IP and transport layer. The functions will calculate the correct checksum for that packet and also return a pointer to the checksum field in the appropriate header so that the caller can either evaluate whether the checksum is correct, replace the existing checksum, or do whatever they want.  * Also managed to fix a bunch of broken Revision svn tags

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -33,6 +33,7 @@ libtrace_la_SOURCES = trace.c common.h \
 		format_atmhdr.c \
 		libtrace_int.h lt_inttypes.h \
 		linktypes.c link_wireless.c \
+		checksum.c checksum.h \
 		protocols_pktmeta.c protocols_l2.c protocols_l3.c \
 		protocols_transport.c protocols.h protocols_ospf.c \
 		$(DAGSOURCE) format_erf.h \
