Added a new format: rawerf. This is a special format that will force ERF files to be opened and read without going through the compression autodetection. It will only work for uncompressed ERF files.
This should be a handy option for people who are working with lots of uncompressed ERF files -- running the compression autodetection against uncompressed ERF traces can very occasionally produce a false positive, i.e. decide the file is compressed. By skipping the autodetection and forcing the traces to be read as uncompressed ERF, the threat of this bug will go away.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -305,7 +305,8 @@ enum base_format_t {
 	TRACE_FORMAT_TSH	  =12,	/**< TSH trace format */
 	TRACE_FORMAT_ATMHDR	  =13,	/**< Legacy ATM header capture */
 	TRACE_FORMAT_LEGACY_NZIX  =14,	/**< Legacy format used for NZIX traces */
-	TRACE_FORMAT_LINUX_RING	  =15	/**< Linux native interface capture PACKET_MMAP */
+	TRACE_FORMAT_LINUX_RING	  =15,	/**< Linux native interface capture PACKET_MMAP */
+	TRACE_FORMAT_RAWERF	  =16,	/**< Special format for reading uncompressed ERF traces without checking for compression */
 };
 
 /** RT protocol packet types */
