Fix build issues on Fedora when an older version of libwandio is already installed -- basically, the fix is to be explicit about requiring the programs to link against libwandio rather than relying on the dependency being resolved automatically.

--- a/examples/Makefile.examples
+++ b/examples/Makefile.examples
@@ -1,9 +1,7 @@
-
-
 AM_CFLAGS=-I"$(top_srcdir)/lib" -I"$(top_srcdir)/libpacketdump" \
-	-I"$(top_srcdir)/libwandio"
+        -I"$(top_srcdir)/libwandio"
 AM_CXXFLAGS=-I"$(top_srcdir)/lib" -I"$(top_srcdir)/libpacketdump" \
-	-I"$(top_srcdir)/libwandio"
-	
+        -I"$(top_srcdir)/libwandio"
+
 AM_LDFLAGS=-L"$(top_srcdir)/lib" -L"$(top_srcdir)/libpacketdump" \
- 	-L"$(top_srcdir)/libwandio" -ltrace -lwandio @TOOLS_LIBS@
+        -L"$(top_srcdir)/libwandio" -ltrace -lwandio
