--- a/examples/stats/Makefile.am
+++ b/examples/stats/Makefile.am
@@ -1,9 +1,6 @@
 
 noinst_PROGRAMS=stats
 
-AM_CFLAGS=-I$(top_srcdir)/lib -I$(top_srcdir)/libpacketdump
-AM_CXXFLAGS=-I$(top_srcdir)/lib -I$(top_srcdir)/libpacketdump
-AM_LDFLAGS=-L$(top_srcdir)/lib -L$(top_srcdir)/libpacketdump -ltrace 
-
+include ../Makefile.examples
 stats_SOURCES=stats.c
 
