--- a/examples/tutorial/Makefile.am
+++ b/examples/tutorial/Makefile.am
@@ -3,9 +3,7 @@ noinst_PROGRAMS=configdemo createdemo filterdemo getpayloaddemo gettcpdemo \
 gettransportdemo headerdemo httpcount lengthdemo mplscount mplstag readdemo \
 sourcedemo timedemo writedemo 
 
-AM_CFLAGS=-I$(top_srcdir)/lib -I$(top_srcdir)/libpacketdump
-AM_CXXFLAGS=-I$(top_srcdir)/lib -I$(top_srcdir)/libpacketdump
-AM_LDFLAGS=-L$(top_srcdir)/lib -L$(top_srcdir)/libpacketdump -ltrace
+include ../Makefile.examples
 
 configdemo_SOURCES=configdemo.c
 createdemo_SOURCES=createdemo.c
