--- a/examples/skeleton/Makefile.am
+++ b/examples/skeleton/Makefile.am
@@ -1,10 +1,7 @@
 
 noinst_PROGRAMS=trivial complete event output
 
-AM_CFLAGS=-I$(top_srcdir)/lib -I$(top_srcdir)/libpacketdump
-AM_CXXFLAGS=-I$(top_srcdir)/lib -I$(top_srcdir)/libpacketdump
-AM_LDFLAGS=-L$(top_srcdir)/lib -L$(top_srcdir)/libpacketdump -ltrace
-
+include ../Makefile.examples
 trivial_SOURCES=trivial.c
 complete_SOURCES=complete.c
 event_SOURCES=event.c
