Fixed problems with decoding RadioTap headers with libpacketdump on big endian hosts
 * Moved byteswapX functions to a separate source file so that libpacketdump
   can also link against them.
 * bswap_* macros have been moved into lt_bswap.h so they can be used without
   having to include the entire libtrace_int.h header
 * Fixed endianness issues with the "fields" inside the RadioTap header.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -43,8 +43,8 @@ libtrace_la_SOURCES = trace.c common.h \
 		format_rt.c format_helper.c format_helper.h format_pcapfile.c \
 		format_duck.c format_tsh.c $(NATIVEFORMATS) $(BPFFORMATS) \
 		format_atmhdr.c \
-		libtrace_int.h lt_inttypes.h \
-		linktypes.c link_wireless.c \
+		libtrace_int.h lt_inttypes.h lt_bswap.h \
+		linktypes.c link_wireless.c byteswap.c \
 		checksum.c checksum.h \
 		protocols_pktmeta.c protocols_l2.c protocols_l3.c \
 		protocols_transport.c protocols.h protocols_ospf.c \
